--- a/InvitationAcceptationPage.html
+++ b/InvitationAcceptationPage.html
@@ -10,10 +10,10 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: #8BC34A;
 }
 
-.topnav a {
+.topnav p {
   float: left;
   color: #f2f2f2;
   text-align: center;
@@ -22,29 +22,22 @@ body {
   font-size: 17px;
 }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #4CAF50;
+.topnav p.active {
+  background-color: #8BC34A;
   color: white;
+  font-size: 45px;
 }
 </style>
 </head>
 <body>
 
 <div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <p class="active">Event organizer</p>
 </div>
 
 <div style="padding-left:16px">
-  <h2>Top Navigation Example</h2>
-  <p>Some content..</p>
+  <h2>Thank you!</h2>
+  <p>Your invitation answer is sent.</p>
 </div>
 
 </body>
